--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "js-backend",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "keywords": [],
+  "description": ""
 }
