--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "start": "node app.js",
+    "start": "node src/articulosApp.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
