--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.1.1",
+    "mongoose": "^7.5.0",
     "socket.io": "^4.7.2"
   }
 }
