--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "start": "node src/articulosApp.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "mosk",
   "license": "ISC",
   "keywords": [],
   "description": "",
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.1.1",
+    "mongodb": "^6.0.0",
     "mongoose": "^7.5.0",
     "socket.io": "^4.7.2"
   }
